# growthreader

./: .gitignore  LP600_example.xlsx  README.md  __init__.py  growth_curves_module.py  growth_rates.csv  measure_growth_rates_script.py  pipeline.py  pyproject.toml  requirements.txt
examples/: Biotek_fluorescence_example.xlsx  SynergyH1_example.xlsx  measure_growth_rates.ipynb  measure_growth_rates.py  measure_growth_rates_LP600.py  measure_growth_rates_script.py  plot_OD_fluo_SynergyH1.py  plot_biotek_od_fluo_script.py
src/growthreader/: __init__.py  growth_curves_module.py  pipeline.py  pipeline_utils.py
tests/: growth_rates_test.csv  simulated_growth_curves.xlsx  simulated_growth_pipeline_test.py  test_biotek_loader.py  test_synergyh1_loader.py
