[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growthreader"
version = "0.1.0"
description = "Measure growth curves from Agilent LP600 exports."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Eric Rouvie", email = "eric@example.com"}]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
